--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "test-ci": "jest",
     "lint": "eslint . --fix",
     "start": "NODE_ENV=production node app.js",
-    "start-dev": "NODE_ENV=development node app.js"
+    "start-dev": "NODE_ENV=development & node app.js"
   },
   "repository": {
     "type": "git",
@@ -63,7 +63,8 @@
     "babel-preset-stage-0": "^6.5.0",
     "babel-register": "^6.18.0",
     "css-loader": "^0.23.1",
-    "enzyme": "^2.4.1",
+    "enzyme": "^2.8.0",
+    "enzyme-to-json": "^1.5.0",
     "eslint": "^3.7.1",
     "eslint-config-airbnb": "^12.0.0",
     "eslint-plugin-import": "^1.16.0",
@@ -78,6 +79,8 @@
     "postcss-cssnext": "^2.9.0",
     "postcss-import": "^8.2.0",
     "postcss-loader": "^0.13.0",
+    "react-addons-test-utils": "^15.4.2",
+    "react-test-renderer": "^15.4.2",
     "rimraf": "^2.5.4",
     "sass-loader": "^3.2.3",
     "style-loader": "^0.13.1",
